2013-08-14  Rob Buis  <rwlbuis@webkit.org>

        Assertion failure in RenderObject::drawLineForBoxSide
        https://bugs.webkit.org/show_bug.cgi?id=108187

        Reviewed by David Hyatt.

        Add testcase from bug with small adjustments.

        * fast/css/outline-negative-expected.txt: Added.
        * fast/css/outline-negative.html: Added.

2013-08-14  Andreas Kling  <akling@apple.com>

        REGRESSION(r153815): fast/repaint/caret-jump-between-nodes.html sucks.
        <http://webkit.org/b/119520>

        Unreviewed, remove the description text from this repaint test in an attempt
        to get consistent cross-platform results.

        * fast/repaint/caret-jump-between-nodes-expected.txt:
        * fast/repaint/caret-jump-between-nodes.html:
        * platform/gtk/fast/repaint/caret-jump-between-nodes-expected.txt: Removed.
        * platform/qt-5.0-wk2/fast/repaint/caret-jump-between-nodes-expected.txt: Removed.
        * platform/qt/fast/repaint/caret-jump-between-nodes-expected.txt: Removed.

2013-08-13  Chris Fleizach  <cfleizach@apple.com>

        AX: Headings not longer have an AXTitle if they have a link as the only child
        https://bugs.webkit.org/show_bug.cgi?id=119699

        Reviewed by Anders Carlsson.

        * accessibility/heading-title-includes-links.html: Added.
        * platform/mac/accessibility/heading-title-includes-links-expected.txt: Added.
        * platform/mac/accessibility/internal-link-anchors2-expected.txt:

2013-08-14  Christophe Dumez  <ch.dumez@sisa.samsung.com>

        Move id attribute to parent Element interface
        https://bugs.webkit.org/show_bug.cgi?id=119706

        Reviewed by Ryosuke Niwa.

        Rebaseline fast/js/dom-static-property-for-in-iteration.html as
        the order has changed.

        * fast/js/dom-static-property-for-in-iteration-expected.txt:

2013-08-14  Arpita Bahuguna  <a.bah@samsung.com>

        createAttribute/setAttributeNode does not properly normalize case