@@ -1,44 +1,0 @@
-
-
-(repaint rects
-  (rect 8 8 100 100)
-  (rect 8 8 100 100)
-  (rect 3 3 110 110)
-  (rect 8 8 1 18)
-  (rect 8 8 1 18)
-  (rect 3 3 110 110)
-  (rect -5 -5 5 610)
-  (rect 800 -5 5 610)
-  (rect -5 -5 810 5)
-  (rect -5 600 810 5)
-  (rect -5 -5 5 610)
-  (rect 800 -5 5 610)
-  (rect -5 -5 810 5)
-  (rect -5 600 810 5)
-  (rect 8 8 1 18)
-  (rect 16 8 1 18)
-  (rect 3 3 110 110)
-  (rect 3 3 110 28)
-  (rect 3 21 110 10)
-  (rect 3 21 110 10)
-  (rect 3 21 110 28)
-  (rect 16 8 1 18)
-  (rect 8 26 1 18)
-  (rect 8 26 1 18)
-  (rect 8 8 1 18)
-  (rect 3 3 110 28)
-  (rect 3 13 110 18)
-  (rect 8 8 100 5)
-  (rect 3 21 110 28)
-  (rect 3 3 110 28)
-  (rect 8 8 1 18)
-  (rect 3 3 110 10)
-  (rect 3 3 110 28)
-  (rect 3 3 110 28)
-  (rect 3 21 110 28)
-  (rect 8 8 1 18)
-  (rect 8 8 1 18)
-  (rect 8 8 1 18)
-  (rect 8 26 1 18)
-)
-
