@@ -1,25 +1,0 @@
-<script src="resources/text-based-repaint.js" type="text/javascript"></script>
-<script type="text/javascript">
-/* This test verifies that moving the caret between two distinct nodes doesn't leave a ghost behind when the node-relative coordinate offset is identical. */
-function repaintTest() {
-    var div = document.getElementById("div");
-    window.getSelection().setPosition(div, 0);
-    document.execCommand("InsertText", false, "x");
-    document.execCommand("InsertParagraph");
-    window.getSelection().setPosition(div, 0);
-    document.execCommand("ForwardDelete");
-    window.getSelection().setPosition(div, 1);
-}
-</script>
-<html>
-<style>
-#div {
-    font-family: 12px Ahem;
-    width: 100px;
-    height: 100px;
-}
-</style>
-<body onload="runRepaintTest();">
-<div id="div" contenteditable="true"></div>
-</body>
-</html>
